# seesaw

./: .gitignore  DOCS.md  README.md  pyproject.toml
eval/fixtures/: __init__.py  lens_fixtures.yaml  loader.py  quill_fixtures.yaml  scout_fixtures.yaml
eval/graders/: __init__.py  base.py  langsmith_adapter.py  lens.py  quill.py  scout.py
eval/rubrics/: assumption_transparency.md  causal_honesty.md  critique_gap_quality.md  hypothesis_specificity.md  tool_capability_honesty.md
eval/runner/: __init__.py  __main__.py  core.py  handlers.py  langsmith_runner.py
eval/tasks/: __init__.py  copy_suppression.yaml  docstring_circuit.yaml  factual_recall_rome.yaml  gender_bias.yaml  greater_than.yaml  induction_heads.yaml  ioi_circuit.yaml  lens_causal_language_trap.yaml  loader.py  quill_followup_loop.yaml  quill_strong_bundle.yaml  quill_weak_bundle.yaml  scout_tool_bias_sae.yaml  scout_tool_bias_steering.yaml  scout_underspecified.yaml  successor_heads.yaml
experiments/: lens_draft.ipynb  quill_draft.ipynb  scout_draft.ipynb
lens/mcp_client/src/: client.py  commands.py  settings.py
lens/mcp_server/src/: __init__.py  server.py
orchestrator/src/: hitl.py  main.py  pipeline.py
orchestrator/src/clients/: lens_client.py  quill_client.py  scout_client.py
quill/mcp_server/src/: __init__.py  server.py
scout/inputs/samples/: ioi_research_question.md  (+1 more)
shared/validation/: 01_ioi.md  02_greater_than.md  03_gender_bias.md  04_factual_recall_rome.md  05_induction_heads.md  06_successor_heads.md  07_copy_suppression.md  08_docstring_circuit.md  ground_truth.md
(+86 files in other folders)
